fixed nav overflow

--- a/blog/static/blog/css/base.css
+++ b/blog/static/blog/css/base.css
@@ -1299,6 +1299,9 @@ nav .rightmenu .accounts:hover{
         overflow-x: hidden;
         overflow-y: scroll;
     }
+    nav{
+        width: 95%;
+    }
 
     nav .leftmenu{
         flex: 2;
